# sourceshack

./: .gitignore  .gitmodules  Cargo.toml
migrations/: V1__initial.sql
src/: cgi.rs  guards.rs  main.rs  rocket_cgi.rs  util.rs
src/cgi/: auth.rs  mod.rs  rocket.rs
src/db/: mod.rs  postgres.rs
src/routes/: account.rs  front_page.rs  mod.rs  user.rs
src/routes/vcs/: git.rs
src/routes/vcs/git/: http_backend.rs  mod.rs  web.rs
src/vcs/: git.rs
static/: repository.css
styles/: header.scss  repository.scss
templates/: base.tera  front_page.tera  header.tera  repository.tera  sign_in.tera  sign_up.tera  user.tera
